School reupload or something

--- a/imgmaster.html
+++ b/imgmaster.html
@@ -44,8 +44,16 @@
   </div> 
 </div>
 <h1 class="header">List of Images</h1>
-<p><article class="textcontainer">You can find a master list of all images on the website here:</article></p>
-
+<article class="textcontainer"><p>Links to all the images on this website can be found here:</p>
+  <ul>
+    <li>Chinese Surveillance Tower: <a class="inlinelink" href="img/chinasurveillance-1.jpg" title="Chinese Surveillance Tower">chinasurveillance-1.jpg</a></li>
+    <li>Cyber Crime Stock Photo: <a class="inlinelink" href="img/cybercrimestock.jpg" title="Cyber Crime Stock Photo">cybercrimestock.jpg</a></li>
+    <li>Data Breach Chart: <a class="inlinelink" href="img/databreachinfo.jpg" title="Data Breach Information">databreachinfo.jpg</a></li>
+    <li>Edward Snowden: <a class="inlinelink" href="img/snowden-1.jpg" title="Edward Snowden">snowden-1.jpg</a></li>
+    <li>Google Maps Image: <a class="inlinelink" href="img/googlemaps.jpg" title="Google Maps">googlemaps.jpg</a></li>
+    <li>Silhouette: <a class="inlinelink" href="img/anonymous-silhouette.jpg" title="Silhouette">anonymous-sillhouette.jpg</a></li>
+  </ul>
+</article>
 <footer class="textcontainerfooter">
   <p>Project by Kaden Duncan-Matis, University of Lethbridge, New Media 1000-B</p>
 </footer>
