--- a/linksmaster.html
+++ b/linksmaster.html
@@ -44,8 +44,16 @@
   </div> 
 </div><h1 class="header">Other Links
 </h1>
-<p><article class="textcontainer">Links to other websites with more information on this topic can be found below:</article></p>
-
+<article class="textcontainer">
+  <p>Links to other websites with more information can be found below:
+  </p>
+  <ul>
+    <li><a href="https://www.wired.co.uk/article/china-social-credit-system-explained" title="Wired: The Complicated Truth about China's Social Credit System" class="inlinelink">Wired: The Complicated Truth about China's Social Credit System</a></li>
+      <li><a class="inlinelink" href="https://www.businessinsider.com/china-social-credit-system-punishments-and-rewards-explained-2018-4" title="Business Insider: China Social Credit System, Punishments and Rewards Explained">Business Insider: China Social Credit System, Punishments and Rewards Explained</a></li>
+      <li><a class="inlinelink" href="https://www.bbc.com/news/world-us-canada-23123964" title="BBC: Edward Snowden: Leaks that exposed the US spy programme">BBC: Edward Snowden: Leaks That Exposed the US Spy Programme</a></li>
+      <li><a class="inlinelink" href="https://mydatarequest.com/">MyDataRequest</a></li>
+  </ul>
+  </article><br>
 <footer class="textcontainerfooter">
   <p>Project by Kaden Duncan-Matis, University of Lethbridge, New Media 1000-B</p>
 </footer>
