--- a/surveillancecon.html
+++ b/surveillancecon.html
@@ -78,7 +78,7 @@
           <li><a class="inlinelink" href="https://www.businessinsider.com/china-social-credit-system-punishments-and-rewards-explained-2018-4" title="Business Insider: China Social Credit System, Punishments and Rewards Explained">Business Insider: China Social Credit System, Punishments and Rewards Explained</a></li>
           <li><a class="inlinelink" href="https://youtu.be/Dkw15LkZ_Kw" title="Youtube: China’s "Social Credit System" has Caused more than just Public Shaming (HBO)">Youtube: China’s "Social Credit System" Has Caused More Than Just Public Shaming (HBO)</a></li>
         </ul></td>
-      <td><img src="img/chinasurveillance-1.jpg" width="700" height="394" alt=""/></td>
+      <td><img src="img/chinasurveillance-1.jpg" class="image" width="700" height="394" alt=""/></td>
     </tr>
   </tbody>
 </table>
