--- a/vidmaster.html
+++ b/vidmaster.html
@@ -44,9 +44,18 @@
   </div> 
 </div>
 <h1 class="header">List of Videos</h1>
-<p>
-  <article class="textcontainer">Links to videos relevant to this website can be found here:</article></p>
-
+<article class="textcontainer">
+  <p>Links to videos relevant to this website can be found here.<br>
+  </p>
+  <table width="100%" border="0" cellpadding="14">
+      <tbody>
+    <tr>
+      <td width="33%" align="center"><iframe width="560" height="315" src="https://www.youtube.com/embed/rXVJUxlwDLw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td width="34%" align="center"><iframe width="560" height="315" src="https://www.youtube.com/embed/ucRWyGKBVzo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td width="33%" align="center"><iframe width="560" height="315" src="https://www.youtube.com/embed/Dkw15LkZ_Kw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+  </tbody>
+</table></article><br>
 <footer class="textcontainerfooter">
   <p>Project by Kaden Duncan-Matis, University of Lethbridge, New Media 1000-B</p>
 </footer>
