--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
 </div><h1 class="header">Home
 </h1>
 <p>
-  <article class="textcontainer">The issue of internet surveillance and internet privacy has been predominant in recent times, as major data corporations (such as Google) collect more and more information on every individual that uses their services on a daily basis. However, this data can be used for nefarious purposes once in the hands of others and out of your control. This site hopes to help educate one on data privacy and information collection, including the pros and cons of both internet privacy and internet surveillance, as well as tips on what you can do to help protect your information.</article></p>
-
+  <article class="textcontainer">The issue of internet surveillance and internet privacy has been predominant in recent times, as major data corporations (such as Google) collect more and more information on every individual that uses their services on a daily basis. However, this data can be used for nefarious purposes once in the hands of others and out of your control. This site hopes to help educate one on data privacy and information collection, including the pros and cons of both internet privacy and internet surveillance, as well as tips on what you can do to help protect your information.</article></p><article class="textcontainer"><h2>Project Write-Up</h2>
+	This project is intended to educate an individual on the pros and cons of both internet privacy and internet surveillance. 
+	A large amount of technical experimentation was performed. Perhaps most difficult was the creation of the dropdown menu, which required some more difficult HTML coding and I needed some help from an online guide to make it functional. However, I also experimented across the project with a wide array of HTML features, including content embedding, specialized hyperlinks, CSS styling of webpage elements, and tables for organizing content. One can find the results of this experimentation spread out across the multiple pages of this website.</article>
+  </p>
 <footer class="textcontainerfooter">
   <p>Project by Kaden Duncan-Matis, University of Lethbridge, New Media 1000-B</p>
 </footer>
