--- a/surveillancepro.html
+++ b/surveillancepro.html
@@ -43,7 +43,7 @@
     </div>
   </div> 
 </div>
-<h1 class="header">Arguments Against Internet Surveillance</h1>
+<h1 class="header">Arguments for Internet Surveillance</h1>
 <article class="textcontainer">The following are a collection of arguments made in favor of Internet Surveillance:
   <h2>Internet Surveillance Helps Keep us Connected</h2>
 	<table width="100%" border="0" cellpadding="14">
@@ -52,7 +52,7 @@
 	      <td width="67%" align="left" valign="top"><p>Allowing ourselves to be tracked on the internet does have its merits. It allows us to become more and more connected with our online world, and bring the digital world and the real world closer together. By keeping tabs on various aspects of our lives, certain apps and tools are able to receive valuable data that vastly improve their functionality.</p>
           <p>For example, one can look at Google Maps. By approximating your location, Google Maps can locate where you are remotely, and even give you directions from your current position to a location you are attempting to get to in real time.</p>
           <p>This applies to other various apps and tools in different ways as well. For example, a website tracking your data (such as Facebook or Youtube) can analyze it to determine your interests and show you content that you are more likely to enjoy. Another example is applications like Grammarly, which analyze your typing habits and can provide you a detailed report on your habits and skills.</p></td>
-	      <td width="33%" align="center"><img src="img/googlemaps.jpg" class="image" alt="Google Maps" width="460" height="238" title="Google Maps"/></td>
+	      <td width="33%" align="right"><img src="img/googlemaps.jpg" class="image" alt="Google Maps" width="460" height="238" title="Google Maps"/></td>
         </tr>
       </tbody>
   </table>
